[gd_scene load_steps=16 format=2]

[ext_resource path="res://code/debug/Debug_Room1.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 10, 6, 10 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_color = Color( 0.0392157, 1, 0, 1 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
flags_unshaded = true
albedo_color = Color( 1, 0.862745, 0, 1 )

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
albedo_color = Color( 0.0705882, 0, 1, 1 )

[sub_resource type="CubeMesh" id=9]
material = SubResource( 8 )

[sub_resource type="ConcavePolygonShape" id=11]
data = PoolVector3Array( -5, 3, 5, 5, 3, 5, -5, -3, 5, 5, 3, 5, 5, -3, 5, -5, -3, 5, 5, 3, -5, -5, 3, -5, 5, -3, -5, -5, 3, -5, -5, -3, -5, 5, -3, -5, 5, 3, 5, 5, 3, -5, 5, -3, 5, 5, 3, -5, 5, -3, -5, 5, -3, 5, -5, 3, -5, -5, 3, 5, -5, -3, -5, -5, 3, 5, -5, -3, 5, -5, -3, -5, 5, 3, 5, -5, 3, 5, 5, 3, -5, -5, 3, 5, -5, 3, -5, 5, 3, -5, -5, -3, 5, 5, -3, 5, -5, -3, -5, 5, -3, 5, 5, -3, -5, -5, -3, -5 )

[sub_resource type="BoxShape" id=10]

[sub_resource type="BoxShape" id=12]

[sub_resource type="BoxShape" id=13]

[sub_resource type="BoxShape" id=14]

[node name="Debug_Room1" type="Spatial"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 1 )

[node name="BaseRoom" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="Front" type="MeshInstance" parent="BaseRoom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.92439, 3 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="Back" type="MeshInstance" parent="BaseRoom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.92439, -3 )
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="Left" type="MeshInstance" parent="BaseRoom"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3, 2.92439, -1.31134e-07 )
visible = false
mesh = SubResource( 7 )
material/0 = null

[node name="Right" type="MeshInstance" parent="BaseRoom"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3, 2.92439, 1.31134e-07 )
visible = false
mesh = SubResource( 9 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="BaseRoom" groups=["Room"]]
visible = false
input_capture_on_drag = true

[node name="GodDamnit" type="RayCast" parent="BaseRoom/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.37306, 0 )
enabled = true
cast_to = Vector3( 0, -7.521, 0 )
debug_shape_custom_color = Color( 0.341176, 1, 0.247059, 1 )
debug_shape_thickness = 5

[node name="CollisionShape" type="CollisionShape" parent="BaseRoom/StaticBody"]
shape = SubResource( 11 )

[node name="Forward" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7 )

[node name="CollisionShape" type="CollisionShape" parent="Forward"]
shape = SubResource( 10 )

[node name="Back" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7 )

[node name="CollisionShape" type="CollisionShape" parent="Back"]
shape = SubResource( 12 )

[node name="Left" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Left"]
shape = SubResource( 13 )

[node name="Right" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Right"]
shape = SubResource( 14 )

[node name="DPFront" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )

[node name="DPBack" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )

[node name="DPRight" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0 )

[node name="DPLeft" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0 )

[connection signal="body_entered" from="Forward" to="." method="_on_Forward_body_entered"]
[connection signal="body_entered" from="Back" to="." method="_on_Back_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
